estilização do header

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prime Cell</title>
 
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon" />
     <link rel="stylesheet" href="./src/reset.css" />
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <header class="cabecalho flex">
-      <h1 class="logo">Logo</h1>
+      <div class="logo">
+        <img src="./src/images/logo.png" alt="">
+      </div>
       <nav class="menu">
         <ul class="lista-de-navegacao flex">
           <li><a href="#">Solicitar reparo</a></li>
@@ -40,8 +42,11 @@
             >
           </button>
         </div>
+        
+      </section>
 
-        <div div class="destaques">
+      <section class="destaques">
+        <div div class="container">
           <ul>
             <li>iPhones lacrados com garantia de 1 ano apple</li>
             <li>Manutenção de qualidade e rapidez</li>
