ajuste de layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li>
             <a
               href="https://api.whatsapp.com/send?phone=5527988493701&text=Ola,%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20de%20conserto"
-              >Solicitar um Orçamento</a
+              >Solicitar um orçamento</a
             >
           </li>
         </ul>
@@ -32,7 +32,7 @@
       <section class="principal">
         <div class="container">
           <h1>
-            A sua melhor escolha quando o assunto é comprar ou consertar o seu
+            A sua <span>melhor escolha</span> quando o assunto é comprar ou consertar o seu
             smartphone.
           </h1>
           <button>
