--- a/index.html
+++ b/index.html
@@ -29,35 +29,42 @@
       </nav>
     </header>
     <main class="corpo">
-      <section class="principal">
+      <section class="principal flex">
         <div class="container">
           <h1>
             A sua <span>melhor escolha</span> quando o assunto é comprar ou consertar o seu
             smartphone.
           </h1>
           <button>
-            <a
-              href="https://api.whatsapp.com/send/?phone=5527988493701&text&type=phone_number& app_absent=0"
-              >Entre em contato</a
-            >
+            <a href="https://api.whatsapp.com/send/?phone=5527988493701&text&type=phone_number& app_absent=0">Entre em contato</a>
           </button>
         </div>
-        
+        <img src="src/images/avatar.webp" alt="">
       </section>
 
       <section class="destaques">
         <div div class="container">
-          <ul>
-            <li>iPhones lacrados com garantia de 1 ano apple</li>
-            <li>Manutenção de qualidade e rapidez</li>
-            <li>Mão de obra especializada em grandes marcas</li>
+          <ul class="flex">
+            <li class="flex">
+              <img src="https://cdn-icons-png.flaticon.com/512/4456/4456988.png" alt="garantia">
+              <p>iPhones lacrados com garantia de 1 ano apple</p>
+            </li>
+            <li class="flex">
+              <img src="https://cdn-icons-png.flaticon.com/512/10203/10203166.png" alt="icone-rapidez">
+              <p>Manutenção de qualidade e rapidez</p></li>
+            <li class="flex">
+              <img src="https://cdn-icons-png.flaticon.com/512/37/37760.png" alt="icone-apple">
+              <p>Mão de obra especializada em grandes marcas</p>
+            </li>
           </ul>
         </div>
       </section>
 
-      <section class="Localizacao">
-        <h2>Venha até a nossa loja</h2>
-        <a href=""></a>
+      <section class="localizacao flex">
+        <div class="container">
+          <h2>Venha até a nossa loja</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3745.4778615042123!2d-40.255514023909136!3d-20.155819545381924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa59508a9f50cba59%3A0x8a96f732f889311c!2sPrime%20Cell%20Assist%C3%AAncia%20Especializada!5e0!3m2!1spt-BR!2sbr!4v1694738296912!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
       </section>
     </main>
   </body>
