--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="logo">
         <img src="./src/images/logo.png" alt="">
       </div>
-      <nav class="menu">
+      <nav class="menu flex">
         <input type="checkbox" id="menu-hamburguer">
         <label for="menu-hamburguer">
           <div class="menu-hamburger"></div>
@@ -68,7 +68,7 @@
       <section class="localizacao flex">
         <div class="container">
           <h2>Venha até a nossa loja</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3745.4778615042123!2d-40.255514023909136!3d-20.155819545381924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa59508a9f50cba59%3A0x8a96f732f889311c!2sPrime%20Cell%20Assist%C3%AAncia%20Especializada!5e0!3m2!1spt-BR!2sbr!4v1694738296912!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3745.4778615042123!2d-40.255514023909136!3d-20.155819545381924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa59508a9f50cba59%3A0x8a96f732f889311c!2sPrime%20Cell%20Assist%C3%AAncia%20Especializada!5e0!3m2!1spt-BR!2sbr!4v1694738296912!5m2!1spt-BR!2sbr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
         </div>
       </section>
     </main>
