--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </label>
         <ul class="lista-de-navegacao flex">
           <li><a href="#">Rifas</a></li>
-          <li><a href="#">Aparelhos</a></li>
+          <li><a href="./aparelhos.html">Aparelhos</a></li>
           <li>
             <a
               href="https://api.whatsapp.com/send?phone=5527988493701&text=Ola,%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20de%20conserto"
@@ -47,7 +47,7 @@
         <img src="src/images/avatar.webp" alt="">
       </section>
 
-      <section class="destaques">
+      <section class="informacoes">
         <div div class="container">
           <ul class="flex">
             <li class="flex">
@@ -62,6 +62,28 @@
               <p>Mão de obra especializada em grandes marcas</p>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="aparelhos flex">
+        <div class="container">
+          <h2 class="align">Aparelhos lacrados</h2>
+          <div class="container flex">
+            <div class="iphone align">
+              <img src="src/images/iphone-14-promax.png" alt="iphones">
+              <p>iPhones</p>
+            </div>
+  
+            <div class="relogio align">
+              <img src="src/images/ultra.png" alt="">
+              <p>Apple Watch</p>
+            </div>
+
+            <div class="ipad align">
+              <img src="src/images/ipad.webp" alt="">
+              <p>iPads</p>
+            </div>
+          </div>
         </div>
       </section>
 
