adicionado mais aparelhos

--- a/index.html
+++ b/index.html
@@ -70,18 +70,28 @@
           <h2 class="align">Aparelhos lacrados</h2>
           <div class="container flex">
             <div class="iphone align">
-              <img src="src/images/iphone-14-promax.png" alt="iphones">
+              <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-iphone-nav-202309?wid=200&hei=130&fmt=png-alpha&.v=1692971740452" alt="iphones">
               <p>iPhones</p>
             </div>
   
             <div class="relogio align">
-              <img src="src/images/ultra.png" alt="">
+              <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-watch-nav-202309_GEO_BR?wid=200&hei=130&fmt=png-alpha&.v=1693703805521" alt="">
               <p>Apple Watch</p>
             </div>
 
             <div class="ipad align">
-              <img src="src/images/ipad.webp" alt="">
+              <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-ipad-nav-202210?wid=200&hei=130&fmt=png-alpha&.v=1664912135437" alt="">
               <p>iPads</p>
+            </div>
+
+            <div class="mac align">
+              <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-14-16-mac-nav-202301?wid=200&hei=130&fmt=png-alpha&.v=1670959891635" alt="">
+              <p>Mac</p>
+            </div>
+
+            <div class="airpod align">
+              <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-airpods-nav-202209?wid=200&hei=130&fmt=png-alpha&.v=1660676485885" alt="">
+              <p>AirPods</p>
             </div>
           </div>
         </div>
