Atualizando linha de informações

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <section class="informacoes">
         <div div class="container">
           <ul class="flex">
-            <li class="flex">
-              <img src="https://cdn-icons-png.flaticon.com/512/4456/4456988.png" alt="garantia">
+            <li class="item-lista">
+            <img src="https://cdn-icons-png.flaticon.com/512/4456/4456988.png" alt="garantia">
               <p>iPhones lacrados com garantia de 1 ano apple</p>
             </li>
-            <li class="flex">
+            <li class="item-lista">
               <img src="https://cdn-icons-png.flaticon.com/512/10203/10203166.png" alt="icone-rapidez">
               <p>Manutenção de qualidade e rapidez</p></li>
-            <li class="flex">
+            <li class="item-lista">
               <img src="https://cdn-icons-png.flaticon.com/512/37/37760.png" alt="icone-apple">
               <p>Mão de obra especializada em grandes marcas</p>
             </li>
