atualização e adição de arte

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
         </div>
       </section>
 
+      <section class="rifa flex">
+        <div class="container"><img src="src/images/RIFA TUDO.png" alt=""></div>
+      </section>
+
       <section class="localizacao flex">
         <div class="container">
           <h2>Venha até a nossa loja</h2>
