--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
       </section>
 
       <section class="rifa flex">
-        <div class="container"><img src="src/images/RIFA TUDO.png" alt=""></div>
+        <div class="container">
+          <picture class="flex">
+            <source media="(min-width: 1000px)" srcset="src/images/RIFA-TUDO.png" type="image/png">
+            <source media="(max-width: 500px)" srcset="src/images/RIFA-TUDO-500px.png" type="image/png">
+            <img src="src/images/Imagem-rifa-tamanho-medio.png" alt="">
+          </picture>
+        </div>
       </section>
 
       <section class="localizacao flex">
