--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       <section class="informacoes">
         <div div class="container">
           <ul class="flex">
-            <li class="item-lista">
+            <li class="item-lista flex">
             <img src="https://cdn-icons-png.flaticon.com/512/4456/4456988.png" alt="garantia">
               <p>iPhones lacrados com garantia de 1 ano apple</p>
             </li>
-            <li class="item-lista">
+            <li class="item-lista flex">
               <img src="https://cdn-icons-png.flaticon.com/512/10203/10203166.png" alt="icone-rapidez">
               <p>Manutenção de qualidade e rapidez</p></li>
-            <li class="item-lista">
+            <li class="item-lista flex">
               <img src="https://cdn-icons-png.flaticon.com/512/37/37760.png" alt="icone-apple">
               <p>Mão de obra especializada em grandes marcas</p>
             </li>
@@ -67,7 +67,7 @@
 
       <section class="aparelhos flex">
         <div class="container">
-          <h2 class="align">Aparelhos lacrados</h2>
+          <!-- <h2 class="align">Aparelhos lacrados</h2> -->
           <div class="container flex">
             <div class="iphone align">
               <img src="https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/store-card-13-iphone-nav-202309?wid=200&hei=130&fmt=png-alpha&.v=1692971740452" alt="iphones">
