--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Prime Cell</title>
 
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./src/global.css">
     <link rel="stylesheet" href="./src/reset.css" />
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/menu.css">
