ajustes de padding

--- a/aparelhos.html
+++ b/aparelhos.html
@@ -7,6 +7,7 @@
         
         <link rel="stylesheet" href="./src/reset.css">
         <link rel="stylesheet" href="./src/menu.css ">
+        <link rel="stylesheet" href="./src/responsive.css">
         <link rel="stylesheet" href="./src/global.css">
         <link rel="stylesheet" href="./src/style-aparelhos.css">
     </head>
